--- a/.github/workflows/codeguru.yml
+++ b/.github/workflows/codeguru.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java version: 1.8
+        java-version: 1.8
 
     - name: Build with maven
-      run: mvn =B package --file pom.xml  
+      run: mvn -B package --file pom.xml  
 
     - name: CodeGuru Reviewer
       uses: aws-actions/codeguru-reviewer@v1.1  
